--- a/src/main/resources/templates/pages/Topic/TopicDetail/index.html
+++ b/src/main/resources/templates/pages/Topic/TopicDetail/index.html
@@ -103,7 +103,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div style="max-height: 400px; overflow-y: auto; border: 1px solid #ccc; overflow-x: hidden;">
+                                        <div style="height: 240px; overflow-y: auto; border: 1px solid #ccc; overflow-x: hidden;">
                                             <div th:each="partition : ${partitions}" style="margin: 0px 10px 10px 10px; padding: 10px 10px; border: dashed 1px wheat">
                                                 <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 5px;">
                                                     <div style="display: flex; flex-wrap: wrap;">
