--- a/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupDetail/index.html
+++ b/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupDetail/index.html
@@ -84,6 +84,13 @@
                                   hx-swap="beforeend"
                                   hx-target="#parent-div" class="m-messenger__form">
                                 <div style="display: flex;" class="m-messenger__form-controls">
+                                    <select name="mode">
+                                        <option value="">-- Chọn --</option>
+                                        <option value="0">0</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>loca
+                                        
+                                    </select>
                                     <input type="number" name="startOffset" placeholder="Start offset here..." class="m-messenger__form-input">
                                     <input type="number" name="endOffset" placeholder="End offset here..." class="m-messenger__form-input">
                                 </div>
