--- a/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupDetail/index.html
+++ b/src/main/resources/templates/pages/ConsumerGroup/ConsumerGroupDetail/index.html
@@ -89,7 +89,7 @@
                                         <option value="0">0</option>
                                         <option value="1">1</option>
                                         <option value="2">2</option>loca
-                                        
+
                                     </select>
                                     <input type="number" name="startOffset" placeholder="Start offset here..." class="m-messenger__form-input">
                                     <input type="number" name="endOffset" placeholder="End offset here..." class="m-messenger__form-input">
@@ -111,8 +111,8 @@
                                 <form hx-post="/group/changeOffset"
                                       hx-swap="none"
                                       style="display: flex; align-items: center; justify-content: start; gap: 16px;" class="m-list-settings__item">
-                                    <span class="m-list-settings__item-label">Topic: Notifications</span>
-                                    <span class="m-list-settings__item-label">Partition: 1</span>
+                                    <span class="m-list-settings__item-label">Topic: pageviews</span>
+                                    <span class="m-list-settings__item-label">Partition: 0</span>
                                     <label style="padding-top: 5px; font-size: 1rem; font-weight: 400;">
                                         Commited Offset:
                                         <input name="groupId" type="hidden" value="1a3384d8-22c7-4f1d-b489-f9e50ce0e796">
