integate api read avro messsage by offset

--- a/src/main/resources/templates/components/MessageByOffset/index.html
+++ b/src/main/resources/templates/components/MessageByOffset/index.html
@@ -6,11 +6,10 @@
         <div class="m-messenger__message-body">
             <div class="m-messenger__message-content">
                 <div style="display: flex; justify-content: space-between;" class="m-messenger__message-username">
-                    <span>pageviews-0</span>
+                    <span th:text="|${topic}-${partition}|"></span>
                     <span th:text="${message.offset}"></span>
                 </div>
-                <div th:text="${message.message}" class="m-messenger__message-text">
-                </div>
+                <div th:text="${message.message}" class="m-messenger__message-text"></div>
             </div>
         </div>
     </div>
