--- a/src/main/resources/templates/pages/Home/index.html
+++ b/src/main/resources/templates/pages/Home/index.html
@@ -31,7 +31,7 @@
                                 </span>
                                 <div class="m--space-10"></div>
                                 <div class="progress m-progress--sm">
-                                    <div class="progress-bar m--bg-brand" role="progressbar" th:styleappend="|width: ${cpu.processCpuLoad}%;|" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar m--bg-brand" role="progressbar" th:styleappend="|width: ${cpu.processCpuLoad}%;|" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <span class="m-widget24__change">
                                     System CPU Usage
@@ -60,13 +60,13 @@
                                 </span>
                                 <div class="m--space-10"></div>
                                 <div class="progress m-progress--sm">
-                                    <div class="progress-bar m--bg-info" role="progressbar" th:styleappend="|width: ${heap.right}%;|" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                    <div class="progress-bar m--bg-info" role="progressbar" th:styleappend="|width: ${heap.right}%;|" style="width: 0%;"  aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                                 <span class="m-widget24__change">
-                                    Percent
+                                    Used
                                 </span>
                                 <span th:text="|${heap.right}%|" class="m-widget24__number">
-                                    84%
+                                    0%
                                 </span>
                             </div>
                         </div>
@@ -131,10 +131,221 @@
 
                         <!--end::New Users-->
                     </div>
+                    <div class="col-md-12 col-lg-6 col-xl-3">
+
+                        <!--begin::New Users-->
+                        <div class="m-widget24">
+                            <div class="m-widget24__item">
+                                <h4 class="m-widget24__title">
+                                    Buffer Memory
+                                </h4><br>
+                                <span class="m-widget24__desc">
+                                    Memory Usage
+                                </span>
+                                <span th:text="|${bufferUsed}B|" class="m-widget24__stats m--font-success">
+                                    0
+                                </span>
+                                <div class="m--space-10"></div>
+                                <div class="progress m-progress--sm">
+                                    <div class="progress-bar m--bg-success" role="progressbar" th:styleappend="|width: ${bufferUsedRate}%;|" style="width: 0%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <span class="m-widget24__change">
+                                    Used
+                                </span>
+                                <span th:text="|${bufferUsedRate}%|" class="m-widget24__number">
+                                    0%
+                                </span>
+                            </div>
+                        </div>
+
+                        <!--end::New Users-->
+                    </div>
                 </div>
             </div>
         </div>
         <!--end:: Widgets/Stats-->
+
+        <!--Begin::Section-->
+        <div class="row">
+            <div class="col-xl-6">
+
+                <!--begin:: Finance Stats-->
+                <div class="m-portlet  m-portlet--full-height ">
+                    <div class="m-portlet__head">
+                        <div class="m-portlet__head-caption">
+                            <div class="m-portlet__head-title">
+                                <h3 class="m-portlet__head-text">
+                                    Consumer Group / Topic Metrics
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="m-portlet__body">
+                        <div class="m-widget1 m-widget1--paddingless">
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Consumer Group Member</h3>
+                                        <span class="m-widget1__desc">Number Of Consumer Group Member</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${totalGroupMember}" class="m-widget1__number m--font-accent">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Empty Consumer Group</h3>
+                                        <span class="m-widget1__desc">Number Of Empty Consumer Group</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${totalEmptyGroup}" class="m-widget1__number m--font-info">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Global Topic Count</h3>
+                                        <span class="m-widget1__desc">Number Of Topic In Cluster</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${globalTopic}"  class="m-widget1__number m--font-info">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--end:: Finance Stats-->
+            </div>
+
+            <div class="col-xl-6">
+
+                <!--begin:: Finance Stats-->
+                <div class="m-portlet  m-portlet--full-height ">
+                    <div class="m-portlet__head">
+                        <div class="m-portlet__head-caption">
+                            <div class="m-portlet__head-title">
+                                <h3 class="m-portlet__head-text">
+                                    Kafka Node Metrics
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-portlet__body">
+                        <div class="m-widget1 m-widget1--paddingless">
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Active Kafka Controller</h3>
+                                        <span class="m-widget1__desc">Number Of Active Controller</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${activeController}" class="m-widget1__number m--font-accent">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Active Kafka Broker</h3>
+                                        <span class="m-widget1__desc">Number of Active Kafka Broker</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${activeBroker}" class="m-widget1__number m--font-info">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Broker With Degraded Storage</h3>
+                                        <span class="m-widget1__desc">Number of Broker</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${degradedStorageBroker}" class="m-widget1__number m--font-info">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--end:: Finance Stats-->
+            </div>
+
+            <div class="col-xl-6">
+
+                <!--begin:: Finance Stats-->
+                <div class="m-portlet  m-portlet--full-height ">
+                    <div class="m-portlet__head">
+                        <div class="m-portlet__head-caption">
+                            <div class="m-portlet__head-title">
+                                <h3 class="m-portlet__head-text">
+                                    Partition Metrics
+                                </h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="m-portlet__body">
+                        <div class="m-widget1 m-widget1--paddingless">
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Offline Partition</h3>
+                                        <span class="m-widget1__desc">Number Of Offline Partition</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${offlinePartition}" class="m-widget1__number m--font-accent">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Partition Availability</h3>
+                                        <span class="m-widget1__desc">Rate of Available Partition</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="|${availablePartitionRate}%|" class="m-widget1__number m--font-info">0%</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Global Partition</h3>
+                                        <span class="m-widget1__desc">Number of Partition in Cluster</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${globalPartition}" class="m-widget1__number m--font-warning">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="m-widget1__item">
+                                <div class="row m-row--no-padding align-items-center">
+                                    <div class="col">
+                                        <h3 class="m-widget1__title">Under Min ISR Partition</h3>
+                                        <span class="m-widget1__desc">Number of Partition</span>
+                                    </div>
+                                    <div class="col m--align-right">
+                                        <span th:text="${underMinISRPartition}" class="m-widget1__number m--font-danger">0</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--end:: Finance Stats-->
+            </div>
+        </div>
+
+        <!--End::Section-->
     </div>
 </th:block>
 
